k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - port: 7000
      targetPort: 7000
  type: ClusterIP
